# sql-crewai-assitant

./: README.md  agents.yaml  app.py  db_simulator.py  pyproject.toml  test_model.py
