[project]
name = "crew_ai"
version = "0.1.0"
description = "crew-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
crew_ai = "crew_ai.main:run"
run_crew = "crew_ai.main:run"
train = "crew_ai.main:train"
replay = "crew_ai.main:replay"
test = "crew_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
